# solana-helloworld

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  initialize.sh  install-sol.sh  install.sh  package-lock.json  package.json  recover-config.sh  sol-env.sh
client/: index.ts
src/: lib.rs
