[package]
name = "sol-hello"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.9.5"
thiserror = "1.0.24"
borsh = "0.9.1"
borsh-derive = "0.9.1"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.9.5"
solana-sdk = "=1.9.5"
solana-validator = "=1.9.5"
solana-logger = "=1.9.5"

[lib]
crate-type = ["cdylib", "lib"]